--- a/src/Components/register1.css
+++ b/src/Components/register1.css
@@ -5,7 +5,7 @@
 }
 .div1{
     max-width:10000px;
-    width: 1365px !important;
-    height: 663px;
+    width: 100% !important;
+    height: 100vh;
 background-image: linear-gradient(white,#CDB0EE);
 }
